--- a/styles.css
+++ b/styles.css
@@ -31,8 +31,8 @@ header {
   border-radius: 15px;
   position: fixed;
   top: 0;
-  left: -500px; /* Déplace le sommaire hors de l'écran à gauche */
-  width: 500px;
+  left: -10%; /* Déplace le sommaire hors de l'écran à gauche */
+  max-width: 500px;
   z-index: 999;
   transition: left 0.3s ease; /* Ajoute une transition fluide lors du déplacement */
 }
