--- a/styles.css
+++ b/styles.css
@@ -33,6 +33,7 @@ header {
   top: 0;
   left: -10%; /* Déplace le sommaire hors de l'écran à gauche */
   max-width: 500px;
+  max-width: 100%;
   z-index: 999;
   transition: left 0.3s ease; /* Ajoute une transition fluide lors du déplacement */
 }
