--- a/styles.css
+++ b/styles.css
@@ -42,6 +42,7 @@ header {
   margin-bottom: 10px;
 }
 
+/* Styles du contenu principal */
 main {
   padding: 20px;
   margin-top: 120px; /* Ajoutez un espace en haut pour éviter que le contenu principal ne soit masqué par le sommaire fixe */
