--- a/styles.css
+++ b/styles.css
@@ -31,6 +31,7 @@ header {
   border-radius: 15px;
   position: fixed;
   top: 0;
+  align-self: start;
   left: -10%; /* Déplace le sommaire hors de l'écran à gauche */
   max-width: 50%;
   z-index: 999;
