--- a/styles.css
+++ b/styles.css
@@ -26,7 +26,7 @@ header {
 /* Styles du sommaire */
 /* Styles du sommaire */
 #sommaire {
-  background-color: #ebe4d9;
+  background-color: #261803;
   padding: 0px;
   border-radius: 15px;
   position: fixed;
