--- a/styles.css
+++ b/styles.css
@@ -26,7 +26,7 @@ header {
 /* Styles du sommaire */
 /* Styles du sommaire */
 #sommaire {
-  background-color: #000000;
+  background-color: #333;
   padding: 0px;
   border-radius: 15px;
   position: fixed;
@@ -40,6 +40,7 @@ header {
 
 #sommaire.active {
   left: 0; /* Affiche le sommaire à sa position originale */
+  background-color: #;
 }
 
 
