--- a/styles.css
+++ b/styles.css
@@ -40,7 +40,7 @@ header {
 
 #sommaire.active {
   left: 0; /* Affiche le sommaire à sa position originale */
-  background-color: #;
+  background-color: #f3f0e8;
 }
 
 
