--- a/styles.css
+++ b/styles.css
@@ -27,7 +27,7 @@ header {
 /* Styles du sommaire */
 /* Styles du sommaire */
 #sommaire {
-  background-color: #ebe4d9;
+  background-color: #333;
   padding: 20px;
   border-radius: 15px;
   position: fixed;
