--- a/styles.css
+++ b/styles.css
@@ -33,7 +33,7 @@ header {
   position: fixed;
   top: 0;
   left: 0;
-  maxwidth: 500px;
+  max-width: 50%;
   z-index: 999;
   transition: left 0.3s ease-out;
 }
