--- a/styles.css
+++ b/styles.css
@@ -28,7 +28,7 @@ header {
 /* Styles du sommaire */
 #sommaire {
   background-color: #333;
-  
+  display:none;
   padding: 20px;
   border-radius: 15px;
   position: fixed;
