--- a/styles.css
+++ b/styles.css
@@ -28,6 +28,7 @@ header {
 /* Styles du sommaire */
 #sommaire {
   background-color: #333;
+  opacity: ;
   padding: 20px;
   border-radius: 15px;
   position: fixed;
