--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,7 @@ header {
   background-color: #f3f0e8;
   padding: 20px;
   text-align: center;
-  height: ;
+  height: 200px;
 }
 
 /* Styles du sommaire */
