--- a/styles.css
+++ b/styles.css
@@ -72,12 +72,12 @@ section {
   background-color: #ffffff;
   padding: 20px;
   border-radius: 8px;
-  width: ;
+  width: 90%;
 }
 
 img {
-  max-width: 90%;
   max-width: 500px;
+  max-width: 90%;
   border-radius: 15px;
   max-height: 500px;
 }
