--- a/styles.css
+++ b/styles.css
@@ -75,17 +75,12 @@ section {
   width: 90%;
 }
 
-.image-wrapper {
+img {
   max-width: 500px;
-  margin-left: auto;
-  margin-right: auto;
+  max-width: 100%;
+  border-radius: 15px;
+  max-height: 500px;
 }
-
-.image-wrapper img {
-  width: 100%;
-  height: auto;
-}
-
 
 /* Styles du pied de page */
 footer {
