--- a/styles.css
+++ b/styles.css
@@ -75,12 +75,24 @@ section {
   width: 90%;
 }
 
-img {
+.image-wrapper {
   max-width: 500px;
-  max-width: 100%;
-  border-radius: 15px;
-  max-height: 500px;
+  margin-left: auto;
+  margin-right: auto;
+  overflow: hidden;
 }
+
+.image-wrapper img {
+  width: 100%;
+  height: auto;
+}
+
+@media (max-width: 500px) {
+  .image-wrapper {
+    max-width: 100%;
+  }
+}
+
 
 /* Styles du pied de page */
 footer {
