--- a/styles.css
+++ b/styles.css
@@ -75,24 +75,18 @@ section {
   width: 90%;
 }
 
-.image-wrapper {
+img {
   max-width: 500px;
-  margin-left: auto;
-  margin-right: auto;
-  overflow: hidden;
-}
-
-.image-wrapper img {
-  width: 100%;
-  height: auto;
+  max-width: 100%;
+  border-radius: 15px;
+  max-height: 500px;
 }
 
 @media (max-width: 500px) {
-  .image-wrapper {
+  .i {
     max-width: 100%;
   }
 }
-
 
 /* Styles du pied de page */
 footer {
