--- a/styles.css
+++ b/styles.css
@@ -77,13 +77,12 @@ section {
 
 img {
   max-width: 500px;
-  max-width: 100%;
   border-radius: 15px;
   max-height: 500px;
 }
 
 @media (max-width: 500px) {
-  .i {
+  img {
     max-width: 100%;
   }
 }
