--- a/styles.css
+++ b/styles.css
@@ -72,6 +72,7 @@ section {
   background-color: #ffffff;
   padding: 20px;
   border-radius: 8px;
+  align-self: center;
   width: 90%;
 }
 
@@ -81,7 +82,7 @@ img {
   max-height: 500px;
 }
 
-@media (max-width: 500px) {
+@media (max-width: 600px) {
   img {
     max-width: 100%;
   }
